.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:20:30 **** Incremental Build of configuration Debug for project GoogleTest ****
make all 
Building file: ../test/test_operations.cpp
Invoking: Cross G++ Compiler
g++ -I"/home/selim/workspace/GoogleTest/gtest_src" -I"/home/selim/workspace/GoogleTest/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test/test_operations.d" -MT"test/test_operations.d" -o "test/test_operations.o" "../test/test_operations.cpp"
Finished building: ../test/test_operations.cpp
 
Building file: ../src/operations.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/operations.d" -MT"src/operations.d" -o "src/operations.o" "../src/operations.cpp"
Finished building: ../src/operations.cpp
 
Building target: GoogleTest
Invoking: Cross G++ Linker
g++  -o "GoogleTest"  ./test/test_factorial.o ./test/test_main.o ./test/test_operations.o  ./src/factorial.o ./src/operations.o  ./gtest_src/gtest/gtest-all.o   -lpthread
Finished building target: GoogleTest
 
14:20:34 **** Incremental Build of configuration Debug for project GoogleTest ****
make all 
make: `all' için hiçbir şey yapılmadı.
14:20:55 **** Incremental Build of configuration Debug for project GoogleTest ****
make all 
Building file: ../test/test_operations.cpp
Invoking: Cross G++ Compiler
g++ -I"/home/selim/workspace/GoogleTest/gtest_src" -I"/home/selim/workspace/GoogleTest/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test/test_operations.d" -MT"test/test_operations.d" -o "test/test_operations.o" "../test/test_operations.cpp"
../test/test_operations.cpp:26:18: error: macro "TEST" requires 2 arguments, but only 1 given
 TEST(DivitionTest) {
                  ^
../test/test_operations.cpp:26:1: error: ‘TEST’ does not name a type
 TEST(DivitionTest) {
 ^
make: *** [test/test_operations.o] Hata 1
14:21:06 **** Incremental Build of configuration Debug for project GoogleTest ****
make all 
Building file: ../test/test_operations.cpp
Invoking: Cross G++ Compiler
g++ -I"/home/selim/workspace/GoogleTest/gtest_src" -I"/home/selim/workspace/GoogleTest/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test/test_operations.d" -MT"test/test_operations.d" -o "test/test_operations.o" "../test/test_operations.cpp"
Finished building: ../test/test_operations.cpp
 
Building target: GoogleTest
Invoking: Cross G++ Linker
g++  -o "GoogleTest"  ./test/test_factorial.o ./test/test_main.o ./test/test_operations.o  ./src/factorial.o ./src/operations.o  ./gtest_src/gtest/gtest-all.o   -lpthread
Finished building target: GoogleTest
 
14:21:18 **** Incremental Build of configuration Debug for project GoogleTest ****
make all 
Building file: ../test/test_operations.cpp
Invoking: Cross G++ Compiler
g++ -I"/home/selim/workspace/GoogleTest/gtest_src" -I"/home/selim/workspace/GoogleTest/include" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test/test_operations.d" -MT"test/test_operations.d" -o "test/test_operations.o" "../test/test_operations.cpp"
Finished building: ../test/test_operations.cpp
 
Building target: GoogleTest
Invoking: Cross G++ Linker
g++  -o "GoogleTest"  ./test/test_factorial.o ./test/test_main.o ./test/test_operations.o  ./src/factorial.o ./src/operations.o  ./gtest_src/gtest/gtest-all.o   -lpthread
Finished building target: GoogleTest
 
